Sending in base64 encoded data to the printer.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Printer Watcher!</title>
     <script src="./scripts/pusher.min.js"></script>
+    <script src="./scripts/jquery.min.js"></script>
   <script src="./scripts/printJob.js"></script>
     <script src="./scripts/initializer.js"></script>
   </head>
   <body>
     <h1>Printer Watcher</h1>
-    <p>Printer Name: <b><i id="printerName"></i></b> </p> 
+    <p>Printer Name: <b><i id="printerName"></i></b> </p>
     <p> Current Job Status: </p><p id="currentJob"></p>
     <h4 id="notifier"></h4>
     <h3 id="error"></h3>
