--- a/settings.html
+++ b/settings.html
@@ -17,11 +17,15 @@
         <input type="submit"  class="demo-button" value="Submit" />
    </form>
        <a href="index.html"> home </a>
+       <script>
+           window.RSVP = require('./scripts/rsvp-3.1.0.min.js');
+           </script>
+       <script src="./scripts/sha-256.min.js"></script>
+       <script src="./scripts/qz-tray.js"></script>
    <script>
        var _$ = function(str){
           return document.querySelector(str);
        };
-        var printer = require("printer");
        window.onload = init();
        function init() {
            if (localStorage.getItem("name") !== null) {
@@ -30,21 +34,25 @@
            }
        }
         function populateSelect(){
-            var raw_printers = printer.getPrinters();
-            var modified_printers = raw_printers.map(function(printer){
-                return printer.name;
-            })
-                var sel = document.myform.req_one;
-            for (var i=0; i < modified_printers.length; i++){
-                var opt = document.createElement('option');
-                opt.innerHTML = modified_printers[i].replace(/[_]/g, ' ');
-                opt.value = modified_printers[i];
-                sel.appendChild(opt);
-            }
+            qz.websocket.connect().then(function() {
+              var raw_printers = qz.printers.find().then(function(printer){
+                  var modified_printers =  printer;
+                  var sel = document.myform.req_one;
+                  for (var i=0; i < modified_printers.length; i++){
+                      var opt = document.createElement('option');
+                      opt.innerHTML = modified_printers[i].replace(/[_]/g, ' ');
+                      opt.value = modified_printers[i];
+                      sel.appendChild(opt);
+                    }
+                });
+              }).catch(function(err){
+                  console.log(err);
+              })
+
         }
 
         populateSelect();
-        
+
        document.querySelector("#myForm").addEventListener("submit", function(e){
            e.preventDefault();    //stop form from submitting
            if(!_$('#printerSelect').value){
