Made printing manual

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <body>
     <h1>Printer Watcher</h1>
     <div id="notifier" style="color: green;"></div>
+    <div id="jobs" style="color: blue;"></div>
     <p id="printerName" style="display: none;">Printer Name: </p>
     <p id="jobStatus" style="display: none;"> Current Job Status: </p><p id="currentJob"></p>
     <div id="error"></div>
+    <ul id="list"></ul>
     <a href="settings.html"> Settings </a>
   </body>
 </html>
